# blockchain-homework-1

./: .gitignore  CMakeLists.txt  Parser.cpp  README.md  data.txt  main.cpp  make_debug.sh  make_release.sh  make_solution.sh  make_xcode.sh
cmake/: addprefix.cmake  execute_script.cmake  get_version.cmake  make_executable.cmake  make_library.cmake  make_shared_library.cmake
src/: CMakeLists.txt
src/generator/: CMakeLists.txt
src/generator/include/generator/: GeneratorApp.h
src/generator/src/: GeneratorApp.cpp  main.cpp
src/libs/: CMakeLists.txt
src/libs/parser/: CMakeLists.txt
src/libs/parser/include/parser/: Parser.h
src/libs/parser/src/: Parser.cpp
